# bifrost-kiosk

./: .gitignore  CLAUDE.md  DEVICE-STATE.md  README.md  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/java/live/theundead/bifrost/kiosk/voice/: ReplayReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
app/src/main/java/live/theundead/bifrost/kiosk/: AdminReceiver.kt  BootReceiver.kt  CommandBus.kt  DisplayPower.kt  EnrollmentClient.kt  KioskApp.kt  KioskCheckin.kt  KioskCommandStream.kt  KioskUpdater.kt  LinkService.kt  LockTask.kt  MainActivity.kt  NoiseMonitor.kt  PinGate.kt  Prefs.kt  ScanActivity.kt  SettingsActivity.kt
app/src/main/java/live/theundead/bifrost/kiosk/voice/: AudioSource.kt  BifrostVoiceClient.kt  HybridSpeechEngine.kt  ModelResolver.kt  SpeechEngine.kt  TtsPlayer.kt  VocabularyClient.kt  VoiceFeedback.kt  VoicePipeline.kt  VoiceService.kt  VoskSpeechEngine.kt  WakeWord.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml  activity_scan.xml  activity_settings.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/live/theundead/bifrost/kiosk/: NoiseDetectorTest.kt
app/src/test/java/live/theundead/bifrost/kiosk/voice/: ModelResolverTest.kt  VocabularyTest.kt  WakeWordTest.kt
scripts/: env.sh  fetch-vosk-model.sh  fetch-whisper.sh  release.sh
